--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Karla:ital,wght@0,200..800;1,200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root{
+    --bg-page-color: #151b39;
+    --bg-container-color: #0c1027;
+    --text-color: white;
+    --bg-btn: rgb(0, 110, 255);
+    --bg-btn-hover: #0c1027;
+}
+
 html{
     box-sizing: border-box;
 }
@@ -11,9 +19,76 @@ body{
     background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     color: white;
     font-family: Montserrat, sans-serif;
-    font-weight: 600;
+    font-weight: 400;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.quote-container{
+    width: auto;
+    max-width: 300px;
+    padding: 25px 40px;
+    box-shadow: 4px 4px rgb(0, 195, 255);
+    border-radius: 6px;
+    background-color: #0c1027;
+    transition: box-shadow .4s;
+}
+
+.quote-text{
+    font-size: 1.9rem;
+    margin: 0 0 20px 0;
+}
+
+.quote-author{
+    display: block;
+    text-align: end;
+    margin-bottom: 50px;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+button{
+    font-family: Montserrat, sans-serif;
+    font-weight: 600;
+    background-color: rgb(0, 110, 255);
+    color: white;
+    border: none;
+    padding: 8px 18px;
+    font-size: 1rem;
+    border-radius: 5px;
+    box-shadow: 0px 2px rgba(255, 255, 255, 0.9);
+    cursor: pointer;
+    transition: .1s, color .3s;
+}
+
+button:hover{
+    filter: brightness(115%);
+    color: #0c1027;
+}
+
+button:active{
+    transform: translate(0, 2px);
+    box-shadow: 0px 0px;
+}
+
+.quote-btns{
+    display: flex;
+    justify-content: space-between;
+}
+
+@media screen and (min-width: 768px){
+    
+    .quote-container{
+        max-width: 700px;
+    }
+
+    .quote-text{
+        font-size: 2.1rem;
+    }
+
+    button{
+        font-size: 1.1rem;
+    }
 }
