--- a/style.css
+++ b/style.css
@@ -6,10 +6,16 @@
     --text-color: white;
     --bg-btn: rgb(0, 110, 255);
     --bg-btn-hover: #0c1027;
+
+    --fs-base: 16px;
+    --fs-quote-text: 1.3rem;
+    --fs-quote-author: 1rem;
+    --fs-button: .9rem;
 }
 
 html{
     box-sizing: border-box;
+    font-size: var(--fs-base);
 }
 
 body{
@@ -28,7 +34,7 @@ body{
 
 .quote-container{
     width: auto;
-    max-width: 300px;
+    max-width: 250px;
     padding: 25px 40px;
     box-shadow: 4px 4px rgb(0, 195, 255);
     border-radius: 6px;
@@ -36,16 +42,16 @@ body{
     transition: box-shadow .4s;
 }
 
-.quote-text{
-    font-size: 1.9rem;
+#quote-text{
+    font-size: var(--fs-quote-text);
     margin: 0 0 20px 0;
 }
 
-.quote-author{
+#quote-author{
     display: block;
     text-align: end;
     margin-bottom: 50px;
-    font-size: 1.2rem;
+    font-size: var(--quote-author);
     font-weight: 600;
 }
 
@@ -56,7 +62,7 @@ button{
     color: white;
     border: none;
     padding: 8px 18px;
-    font-size: 1rem;
+    font-size: var(--fs-button);
     border-radius: 5px;
     box-shadow: 0px 2px rgba(255, 255, 255, 0.9);
     cursor: pointer;
@@ -79,16 +85,13 @@ button:active{
 }
 
 @media screen and (min-width: 768px){
-    
+    :root{
+        --fs-quote-text: 2.1rem;
+        --fs-quote-author: 1.3rem;
+        --fs-button: 1.1rem;
+    }
+
     .quote-container{
-        max-width: 700px;
-    }
-
-    .quote-text{
-        font-size: 2.1rem;
-    }
-
-    button{
-        font-size: 1.1rem;
+        max-width: 800px;
     }
 }
